# simple-http-server

./: README.md  httpd.py  pyproject.toml  requirements.txt
src/: http_parser.py  http_response.py  server.py  utils.py
static/: index.html  test.html
tests/: httptest.py
