[project]
name = "simple-http-server"
version = "0.1.0"
description = "Simple HTTP server implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiofiles>=23.0.0",
    "ruff>=0.1.0",
]
